<resources>

    <string name="all_app_name" translatable="false">PocketWaka</string>

    <string name="all_error_invalid_url">Can\'t open this url</string>

    <string name="all_error_invalid_access">Connection to Wakatime was lost.\nPlease, log in again.</string>

    <!-- Main activity -->

    <string name="main_action_refresh">Refresh</string>

    <string name="main_bottomnav_today">Summary</string>
    <string name="main_bottomnav_ranges">Stats</string>
    <string name="main_bottomnav_menu">Menu</string>

    <!-- States -->

    <string name="error_refreshing_token">Please log in again</string>
    <string name="error_state_title">We did our best\nbut couldn’t load your stats</string>

    <string name="error_state_subtitle">Please try again later</string>
    <string name="error_state_action">Retry</string>

    <string name="offline_state_title">Check your connection</string>
    <string name="offline_state_subtitle">We’ll retry as soon as you\'re online</string>
    <string name="empty_state_title">No coding activity</string>

    <string name="empty_state_subtitle">Get plugins for you favorite editors\nand write some code!</string>
    <string name="empty_state_action">Browse plugins</string>

    <string name="status_offline">Offline</string>
    <string name="status_updating">Updating</string>

    <!-- Login -->

    <string name="loginactivity_title_webview">Log in</string>

    <string name="loginactivity_action_sign_in">Log in</string>
    <string name="loginactivity_subtitle_default">Focus on your code,\nnot on tracking time</string>
    <string name="loginactivity_subtitle_loading">Logging in</string>

    <string name="loginactivity_error_generic">Failed to log in</string>

    <string name="loginactivity_subtitle_error_action">Try again</string>

    <!-- Stats -->

    <string name="stats_tab_7_days">Week</string>
    <string name="stats_tab_30_days">Month</string>
    <string name="stats_tab_6_months">6 months</string>
    <string name="stats_tab_1_year">1 year</string>

    <string name="stats_error_unknown">Couldn\'t update stats</string>

    <string name="stats_error_unknown_range">Couldn\'t get stats for this period</string>
    <string name="stats_error_unknown_range_no_network">Network error</string>
    <string name="stats_header_total">Total</string>
    <string name="stats_header_daily_average">Daily average</string>

    <string name="stats_header_best_day">Best day</string>
    <string name="stats_caption_best_day">%d%% greater than your average</string>
    <string name="stats_card_header_projects">Projects</string>
    <string name="stats_card_header_editors">Editors</string>

    <string name="stats_card_header_languages">Languages</string>

    <string name="stats_card_header_operating_systems">Operating systems</string>

    <string name="stats_card_less_than_1_percent" formatted="false" translatable="false">&lt; 1%</string>
    <string name="stats_card_percent_format_int" formatted="false" translatable="false">%.0f%%</string>

    <!-- SUMMARIES -->

    <string name="summary_date_picker_tag" translatable="false">fragment_date_picker</string>

    <string name="summary_title_time_tracked">Time tracked</string>
    <string name="summary_title_projects">Projects</string>

    <string name="summary_projects_state_empty_today_title">No activity today</string>

    <string name="summary_projects_label_no_commits">No commits pushed during this period</string>
    <string name="summary_projects_label_no_repo">Connect repository to see commits</string>
    <string name="summary_projects_template_more_commits">Show %d more commites</string>

    <string name="commits_branch_name_unknown">Unknown</string>
    <string name="summary_template_average_delta_above" formatted="false">above</string>
    <string name="summary_template_average_delta_below" formatted="false">below</string>
    <string name="summary_template_average_delta" formatted="false">%d%% %s monthly average</string>

    <string name="summary_range_separator" translatable="false">%s–%s</string>
    <string name="summary_date_today">Today</string>

    <string name="summary_date_picker_limited_caption">Stats older than 2 weeks are not available on the free plan</string>
    <string name="summary_date_picker_action_apply">Apply</string>

    <!-- Onboarding -->
    <string name="summary_onboarding_title">Date picker is here!</string>
    <string name="summary_onboarding_headline1">Swipe left or right</string>
    <string name="summary_onboarding_body1">to see previous or next day</string>
    <string name="summary_onboarding_headline2">Tap or pull the title</string>
    <string name="summary_onboarding_body2">to choose a date</string>
    <string name="summary_onboarding_action_dismiss">Awesome!</string>

    <!-- MENU -->
    <string name="menu_version_template">Version %s</string>
    <string name="menu_action_rate">Rate PocketWaka</string>
    <string name="menu_action_send_feedback">Send feedback</string>
    <string name="menu_action_open_github">PocketWaka on GitHub</string>
    <string name="menu_action_privacy_policy">Privacy policy</string>
    <string name="menu_action_logout">Log out</string>
    <string name="menu_support_email_subject">PocketWaka feedback</string>
    <string name="rating_dialog_title">Rate PocketWaka</string>
    <string name="rating_dialog_low_rating_message">We\'re sorry if something is wrong 😿\nPlease, drop us a line so we can fix it ASAP</string>
    <string name="rating_dialog_low_rating_message_no_email_app">We\'re sorry if something is wrong 😿\nPlease, email us at %s\nso we can fix it ASAP</string>
    <string name="rating_dialog_low_rating_message_no_email_address">Thanks! Your feedback makes PocketWaka better.</string>
    <string name="rating_dialog_low_rating_action">@string/menu_action_send_feedback</string>

    <!-- OTHER -->

    <plurals name="stats_time_format_hours" formatted="false">
        <item quantity="one">%d hr</item>
        <item quantity="other">%d hrs</item>
    </plurals>

    <plurals name="stats_time_format_minutes" formatted="false">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <string name="stats_time_format_hours_short">%dh</string>
    <string name="stats_time_format_minutes_short">%dm</string>

</resources>
